syntax = "proto3";

package user;

service UserService {
  rpc FindOrCreateUser(FindOrCreateUserRequest) returns (UserResponse) {}
  rpc SoftDeleteUser(SoftDeleteUserRequest) returns (SoftDeleteUserResponse) {}
  rpc FindAllUsers(Empty) returns (Users) {}
  rpc FindOneUser(FindOneUserDto) returns (User) {}
  rpc QueryUsers(stream PaginationDto) returns (stream Users) {}
}

message Empty {}

message FindOneUserDto {
    string id = 1;
}

message PaginationDto {
    int32 page = 1;
    int32 skip = 2;
}

message Users {
    repeated User users = 1;
}

message User {
    string id = 1;
    string username = 2;
    string password = 3;
    int32 age = 4;
    bool subscribed = 5;
    SocialMedia socialMedia = 6;
}

message SocialMedia {
    optional string twitterUri = 1;
    optional string facebookUri = 2;
}

message FindOrCreateUserRequest {
  string googleId = 1;
  string email = 2;
  string name = 3;
}

message UserResponse {
  string id = 1;
  string googleId = 2;
  string email = 3;
  string name = 4;
  string status = 5; // ACTIVE, DELETED, ...
}

message SoftDeleteUserRequest {
  string userId = 1;
}

message SoftDeleteUserResponse {
  bool success = 1;
}
